src/base/objects/Protocol__c/fields/CoinMarketCap_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CoinMarketCap_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>CoinMarketCap External Id</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>