src/base/objects/Protocol__c/fields/Error_Message_CoinMarketCapAPi__c.field-meta.xml
<CustomField>
    <fullName>Error_Message_CoinMarketCapAPi__c</fullName>
    <label>Error Message(CoinMarketCapAPi)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>