src/base/objects/Protocol__c/fields/Inflation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Inflation_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The current inflation rate of the protocol.</description>
    <inlineHelpText>This rate should be updated regularly to ensure accurate forecasting.</inlineHelpText>
    <label>Inflation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>