src/base/objects/Protocol__c/fields/Protocol_Owner__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Protocol Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Protocols</relationshipName>
    <type>Lookup</type>
</CustomField>