src/base/objects/Protocol__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <description>The token&apos;s ticker symbol.</description>
    <label>Symbol</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>