src/base/objects/Protocol__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>Inflation_Rate__c</columns>
    <columns>Symbol__c</columns>
    <columns>CoinMarketCap_External_Id__c</columns>
    <columns>Protocol_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>CS_Team</group>
        <group>Sales_Team</group>
    </sharedTo>
</ListView>